--- a/src/Demo-upgrate/asset2.css
+++ b/src/Demo-upgrate/asset2.css
@@ -1,6 +1,5 @@
 /*这是一条华丽的分割线*/
 .top-info {
-    border: red 1px solid;
     height: 50px;
 
     position: fixed;
@@ -82,7 +81,6 @@
     height: 40%;
     position: relative;
 
-    border: red 0.1rem solid;
 }
 
 .cook-head {
@@ -108,6 +106,34 @@
     left: -0.30rem;
 }
 
+.cook-dish-container {
+    display: none;
+    height: 1.2rem;
+    width: 4.7rem;
+    position: absolute;
+    left: 0.25rem;
+    top:  4.2rem;
+
+    border: white 0.2rem solid;
+    border-radius: 0.2rem;
+    z-index: 20;
+    line-height: 1.2rem;
+    text-align: center;
+    font-size: 0.8rem;
+    color: white;
+}
+
+.cook-serve {
+    display: none;
+    height: 4rem;
+    width: 4rem;
+    position: absolute;
+    z-index: 21;
+
+    top: 1rem;
+    left: -0.3rem;
+}
+
 .cook-head-symbol {
     color: #CC9979;
     font-weight: bolder;
@@ -120,18 +146,6 @@
     text-decoration: none;
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -158,7 +172,6 @@
     margin-top: 0.3rem;
     margin-left: 0.7rem;
 
-    border: red 0.1rem solid;
 }
 
 .client-face {
@@ -195,65 +208,19 @@
     justify-content: flex-start;
 }
 .order-dish {
-    width: 100%;
+    width: 120%;
     height: 1rem;
     color: white;
     border: white 0.15rem solid;
     border-radius: 0.1rem;
+    margin-bottom: 0.2rem;
 
     z-index: 21;
     font-size: 0.7rem;
     line-height: 1rem;
     text-align: center;
+    background:linear-gradient(90deg,#B20000 0%,#FF2020 100%);
 }
-
-/*顾客一*/
-/*#client-face-1 {
-    background:linear-gradient(90deg,#661A00 50%,#401000 50%);
-}
-#dish-container-1 {
-    !*默认值*!
-}
-#client1-dish-1, #client1-dish-2{
-    background-color: #535362;
-}*/
-
-
-/*顾客二*/
-/*#dish-container-2 {
-    height: 75%;
-}
-
-#client-face-2 {
-    background:linear-gradient(90deg,#80FF00 50%,#00B200 50%);
-}
-
-#client2-dish-1, #client2-dish-2, #client2-dish-3{
-    background-color: #00B200;
-}*/
-
-/*顾客三*/
-/*#client-face-3 {
-    background:linear-gradient(90deg,#FF9122 50%,#D96D00 50%);
-}
-#client3-dish-1{
-    background:linear-gradient(90deg,#D96D00 40%,#FF9122 60%);
-}*/
-
-/*顾客四*/
-/*#client-face-4 {
-    background:linear-gradient(90deg,#FF9122 50%,#D96D00 50%);
-}
-#client4-dish-1, #client4-dish-2{
-    background-color: #00B200;
-}
-#client4-dish-3 {
-    background: #535362;
-}
-
-#dish-container-4 {
-    height: 75%;
-}*/
 
 
 
@@ -271,7 +238,6 @@
     flex-wrap: wrap;
     justify-content: flex-end;
 
-    border: red 0.1rem solid;
 }
 
 .waiting li {
@@ -280,7 +246,6 @@
     position: relative;
     margin-top: 0rem;
 
-    border: red 0.1rem solid;
 }
 
 .waiting-face {
@@ -424,6 +389,7 @@ h1 {
 .menu-head {
     height: 1rem;
     width: 100%;
+    margin-bottom: 2rem;
 }
 
 .menu-text {
@@ -439,6 +405,8 @@ h1 {
 
 .menu-face {
     position: fixed;
+    width: 4.2rem;
+    height: 4.2rem;
     left: 2.8rem;
     top: 2rem;
     right: 14.2rem;
@@ -461,8 +429,127 @@ h1 {
     font-weight: bold;
 }
 
+.menu-submit {
+    width: 43%;
+    height: 4rem;
+    background:linear-gradient(180deg,#FFE699 50%,#FFD24D 50%);
+    border-radius: 10rem;
+    border: 0.2rem #9D780B solid;
+    margin-top: 1rem;
+    color: #8C6700;
+    font-weight: bold;
+}
+.menu-reset {
+    width: 25%;
+    height: 4rem;
+    background:linear-gradient(180deg,#FFE699 50%,#FFD24D 50%);
+    border-radius: 10rem;
+    border: 0.2rem #9D780B solid;
+    margin-top: 1rem;
+    color: #8C6700;
+    font-weight: bold;
+}
+.menu-conceal {
+    width: 27%;
+    height: 4rem;
+    background:linear-gradient(180deg,#FFE699 50%,#FFD24D 50%);
+    border-radius: 10rem;
+    border: 0.2rem #9D780B solid;
+    margin-top: 1rem;
+    color: #8C6700;
+    font-weight: bold;
+}
 
+/*提示框*/
+.tips {
+    display: none;
+    width: 15.5rem;
+    height: 3.3rem;
+    position: fixed;
+    z-index: 30;
+    top: 15rem;
+    left: 3rem;
+    color: #916F08;
+    background-color: #D9E67D;
+    padding: 1rem;
 
+    border: white 0.3rem solid;
+    border-radius: 0.3rem;
+    font-size: large;
+    font-weight: bold;
+}
 
+.loading {
+    display: none;
+    position: fixed;
+    z-index: 71;
+    top: 13rem;
+    left: 0.7rem;
+    bottom: 12rem;
+    right: 0.7rem;
+    color: #916F08;
+    background-color: #FFD24D;
+    padding: 1rem;
+
+    border: white 0.4rem solid;
+    border-radius: 1.2rem;
+}
+.load-btn {
+    color: #AE8816;
+    font-weight: bold;
+    width: 8rem;
+    height: 3rem;
+    margin-top: 1rem;
+    margin-left: 5.6rem;
+    border-radius: 1.2rem;
+    border: #AE8816 0.2rem solid;
+    background:linear-gradient(180deg,#FFE699 50%,#FFD24D 50%);
+}
+
+#tip-2 {
+    background-color: #FFB399;
+    height: 3rem;
+}
+
+/*小餐盘*/
+.dish-plate {
+    display: none;
+    height: 1.1rem;
+    width: 1.1rem;
+    position: fixed;
+    top: 21.4rem;
+    left: 10.3rem;
+    z-index: 77;
+
+    background:linear-gradient(90deg,#FF2626 50%,#B20000 50%);
+    border-radius: 50%;
+    border: white 0.1rem solid;
+}
+.dish-plate-img {
+    display: none;
+    height: 1.4rem;
+    width: 1.4rem;
+    position: absolute;
+    z-index: 78;
+    left: -0.17rem;
+    top: -0.1rem;
+}
+
+.money {
+    display: none;
+    height: 3rem;
+    width: 3rem;
+    position: fixed;
+    top: 23rem;
+    left: 1.7rem;
+    z-index: 77;
+
+}
+
+#like2 {
+    top: 18rem;
+    left: 10rem;
+    z-index: 80;
+}
 
 
